styling the buttons

--- a/color_filler/main.html
+++ b/color_filler/main.html
@@ -2,6 +2,26 @@
 <html lang="en">
 <head>
     <title>Color Filler</title>
+    <style>
+        #green {
+            background-color: green;
+        }
+
+        #red {
+            background-color: red;
+        }
+
+        #blue{
+            background-color: blue;
+        }
+
+        button{
+            border-radius: 5px;
+            width: 100px;
+            height: 45px;
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
     <h3>Color filler</h3>
