combining the scripting file

--- a/color_filler/main.html
+++ b/color_filler/main.html
@@ -29,5 +29,6 @@
     <button id="red">Red</button>
     <button id="blue">Blue</button>
     <button>Random</button>
+    <script src="index.js"></script>
 </body>
 </html>
